A lot of font fixes to improve legibility

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,8 +13,8 @@ a:hover {
 
 // Set font for headers
 h1, h2, h3, h4, h5, h6 {
-  font-family: $heading-font-family;
-  font-weight: $heading-font-weight;
+  font-family: $base-font-family;
+  font-weight: $base-font-weight;
 }
 
 // Set background color
