--- a/css/main.scss
+++ b/css/main.scss
@@ -11,8 +11,8 @@
 }
 
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Amatic+SC:700);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
+@import url(https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 
 // Brand colors
 $brand-color-highlight:  #2ECC71;
@@ -25,8 +25,8 @@ $brand-color-text:       #95A5A6;
 $base-font-family:    "Open Sans Condensed", sans-serif;
 $base-font-size:      18px;
 $base-font-weight:    300;
-$heading-font-family: "Amatic SC", cursive;
-$heading-font-weight: 700;
+$heading-font-family: "Sue Ellen Francisco", cursive;
+$heading-font-weight: 400;
 $max-page-width:      970px;
 $vertical-spacing:    20px;
 $default-anim-length: 200ms;
